--- a/style.css
+++ b/style.css
@@ -3,8 +3,13 @@
 :root {
     --color-dark: hsl(252, 30%, 17%); 
     --color-white: hsl(252, 30%, 100%);
-    --color-light: hsl(252, 15%, 65%);
-    --coloro-black: hsl(252, 30%, 10%);
+    --color-light: hsl(180 2% 61%);
+    --color-black: hsl(252, 78%, 10%);
+    --color-primary: hsl(252, 75%, 60%);
+    --color-secondary: hsl(252, 100%, 90%);
+    --color-success: hsl(120, 86%, 49%);
+    --color-danger: hsl(0, 95%, 75%);
+
 }
 
 body {
