--- a/style.css
+++ b/style.css
@@ -40,5 +40,24 @@ body {
 
 img {
     display: inline-block;
-    padding: var();
+    padding: 100%;
+}
+
+.btn {
+    display: inline-block;
+    font-weight: 500;
+    border-radius: var(--border-radius);
+    padding: var(--btn-padding); 
+    cursor: pointer;
+    transition: all 300ms ease;
+    font-size: 0.9rem;
+}
+
+.btn:hover {
+    opacity: 0.8;
+}
+
+.btn-primary {
+    background: var(--color-primary);
+    color: white;
 }
