--- a/style.css
+++ b/style.css
@@ -68,5 +68,35 @@ img {
 }
 
 .text-sip {
-    color: var(--colo);
+    color: var(--color-gray);
+}
+
+/*=================NAVBAR==============*/
+nav {
+    width: 100%;
+    background: var(--color-white);
+    padding: 0.7rem 0;
+    position: fixed;
+    top: 0;
+    z-index: 10;
+}
+
+nav .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+nav .search-bar{
+    background: var(--color-light);
+    border-radius: var(--border-radius);
+    padding: var(--search-padding);
+} 
+
+nav .search-bar input[type="search"] {
+    background-color: transparent;
+    width: 30vw;
+    margin-left: 1rem;
+    font-size: 0.9rem;
+    color: var(--color-dark);
 }
