--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     margin: 0 auto;
 }
 
-.profile-photo {
+.profile-picture {
     width: 2.8rem;
     aspect-ratio: 1/1;
     border-radius: 60%;
@@ -99,4 +99,14 @@ nav .search-bar input[type="search"] {
     margin-left: 1rem;
     font-size: 0.9rem;
     color: var(--color-dark);
+}
+
+nav .search-bar input[type="search"]::placeholder {
+    color: var(--color-gray);
+}
+
+nav .create {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
 }
